Updated scripts to add more equipments and implemented pagination equipment